--- a/financialaid.html
+++ b/financialaid.html
@@ -85,32 +85,48 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Financial Aid</h3>
-                                    <div>
-                                        <a class="list-group-item" href="scholarships.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Scholarships</a>                                        
-                                        <a class="list-group-item" href="studentloads.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Student Loads</a>
-                                    </div>                                   
-                                </section>
 
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="scholarships.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Scholarships</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="studentloads.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Student Loads</a></th>
+                                        </tr>
+                                    </table>                                     
+                                </section>                                
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -119,14 +135,13 @@
                                     <h2>Financial Aid</h2>
 
                                     <p> Students should ensure they have sufficient funds available when they decide to participate in our study in China program. Only when your payments are ready will we be able to help organize the trip for you.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp; </p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">There are various types of financial aid students can look into, such as <a href="Student_loans.html">student loans</a> and <a href="scholarships.html">scholarships</a>. See the respective pages for detailed information about how to apply  for scholarships and student loans. </p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;"> CUNY students from Macaulay honors should read this below from the Ofiice  of Scholarships & Grants of Macaulay Honors College:        </p>
                                     <blockquote style="margin-top: 0; margin-bottom: 0;">
                                         <p style="margin-top: 0; margin-bottom: 0;"><q>This (China Program) is a very popular program with Macaulay students and our students rave about this program. The likelihood of you receiving funding  is very high (as long as you meet the eligibility requirements - see&nbsp; <a href="http://www.macaulay.cuny.edu/current-students/opp-fund-eligibility.php">this link</a> <a>for more information</a>). Make sure you speak with your Macaulay Advisor ASAP about your plans.</q></p>
-                                        <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+                                    <br>
                                     </blockquote>
                                     <div class="center">        
                                         <img src="images/financial_aid_images/image001.jpg" alt="" width="162" height="121" />
@@ -136,11 +151,11 @@
                                     </div>
                                     <div class="clearFloat"></div>
 
-                                    <p>&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">Some private foundations or family funds may also be willing to support. You just need  to ask around and prepare good rationales to approach them. </p>       <!-- IMAGE -->
-                                    <p>&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">Some of our past students even did fund-raising campaigns at facebook and were able to  get donations from generous supporters.</p>
-                                    <p>&nbsp;</p>
+          
 
 
                                 </article>
@@ -155,7 +170,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -170,7 +185,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -185,7 +200,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -200,7 +215,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
