--- a/halalfood.html
+++ b/halalfood.html
@@ -75,8 +75,8 @@
                                     <li><a href="https://www.facebook.com/cunybc.chinaprogram">Visit Us On Facebook</a></li>
                                     <li><a href="mailto:CUNYinChina@brooklyn.cuny.edu">Email Us A Question</a></li>
                                 </ul>
-                            </li>                             
-
+                            </li>      
+                                                       
                         </ul>
                     </div>
 
@@ -85,32 +85,49 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Travel Info</h3>
-                                    <div>
-                                        <a class="list-group-item" href="passportvisa.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Passport & Visa</a>                                          
-                                        <a class="list-group-item" href="sabbathkosherfood.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Sabbath & Kosher Food</a>                                        
-                                    </div>                                   
+                                  
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="passportvisa.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Passport & Visa</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="sabbathkosherfood.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Sabbath & Kosher Food</a></th>
+                                        </tr>
+                                    </table>                                     
                                 </section>
 
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -157,7 +174,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -172,7 +189,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -187,7 +204,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -202,7 +219,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
