--- a/hostinstitutions.html
+++ b/hostinstitutions.html
@@ -106,7 +106,7 @@
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
@@ -131,7 +131,7 @@
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -139,14 +139,11 @@
 
                                     <h2>Host Institutions</h2>
                                     <p>After touring those important historic and cultural sites in Beijing and Xi’an, we arrive in Nanjing where we stay for about 2 weeks and half--we take Nanjing University and Nanjing Normal University as our host institutions.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
 
                                     <!-- IMAGE -->
                                     <img src="images/host_institutions_images/Fudan-002.jpg" alt="" width="225" height="169" />
 
                                     <p>The program director has good personal connections with many colleges and universities in each of the Chinese cities where we will visit for study and cultural excursions. Our students can have easy access to any of those universities if we have the need.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-
                                     <p>We do not stay in campus dorms, as their conditions are not what we want to have.  In each of the cities, the travel agencies always pick comfortable star-rated commercial hotels for us, where we can have tasty breakfast every morning (included in the program), nice restaurants, 24/7 security guards, room service (maids cleaning our rooms and making the bed every morning), etc. Such benefits are not to be expected in dorms.</p>
 
                                     <hr>
@@ -155,64 +152,63 @@
 
                                     <h3>The following are some Chinese campuses available for us.</h3> 
                                     <ul>
-                                        <li>In Beijing:
+                                        <li><b>In Beijing:</b>
                                             <ul>
-                                                <li><p><a href="http://www.pku.edu.cn/">Peking University</a></p></li>
-                                                <li><p><a href="http://www.ruc.edu.cn/">Renmin University of China</a></p></li>
-                                                <li><p><a href="http://www.cufe.edu.cn/">China Central University of Economics and Finance</a></p></li>
-                                                <li><p><a href="http://www.blcu.edu.cn/blcu.asp">Beijing Language & Culture University</a></p></li>
+                                                <li><a href="http://www.pku.edu.cn/">Peking University</a></li>
+                                                <li><a href="http://www.ruc.edu.cn/">Renmin University of China</a></li>
+                                                <li><a href="http://www.cufe.edu.cn/">China Central University of Economics and Finance</a></li>
+                                                <li><a href="http://www.blcu.edu.cn/blcu.asp">Beijing Language & Culture University</a></li>
                                             </ul>
                                         </li>
 
-                                        <br>
-                                        <hr>
+
                                         <!-- IMAGE -->
-                                        <img src="images/host_institutions_images/Nanda-004.jpg" alt="" width="225" height="169" />
 
-                                        <li>In Xi'an:
+
+                                        <li><b>In Xi'an:</b>
                                             <ul>
-                                                <li><p><a href="http://www.xaiu.edu.cn/">Xi’an International University</a></p></li>
+                                                <li><a href="http://www.xaiu.edu.cn/">Xi’an International University</a></li>
                                             </ul>
                                         </li>
                                         <hr>
-                                        <li>In Nanjing:
+                                        <li><b>In Nanjing:</b>
                                             <ul>
-                                                <li><p><a href="http://www.nju.edu.cn/cps/site/njueweb/fg/index.php">Nanjing University</a></p></li>
+                                                <li><a href="http://www.nju.edu.cn/cps/site/njueweb/fg/index.php">Nanjing University</a></li>
                                                 <li><a href="http://english.njue.edu.cn">Naning University of Finance &amp; Economics</a></li>
                                                 <li><a href="http://english.njust.edu.cn">Nanjing University of Science and Technology</a></li>
-                                                <li><p><a href="http://www.cpu.edu.cn/">China Pharmaceutical University</a></p></li>
-                                                <li><p><a href="http://www.njnu.edu.cn/">Nanjing Normal University</a></p></li>
-                                                <li><p><a href="http://www.njarti.edu.cn/">Nanjing University of The Arts</a></p></li>
+                                                <li><a href="http://www.cpu.edu.cn/">China Pharmaceutical University</a></li>
+                                                <li><a href="http://www.njnu.edu.cn/">Nanjing Normal University</a></li>
+                                                <li><a href="http://www.njarti.edu.cn/">Nanjing University of The Arts</a></li>
                                             </ul>
                                         </li>
                                         <hr>
-                                        <li>In Yangzhou:
+                                        <li><b>In Yangzhou:</b>
                                             <ul style="margin-top: 0; margin-bottom: 0;">
                                                 <li><a href="http://english.yzu.edu.cn/">Yangzhou University</a></li>
                                             </ul>
                                         </li>
                                         <hr>
-                                        <li>In Suzhou:
+                                        <li><b>In Suzhou:</b>
                                             <ul>
-                                                <li><p><a href="http://www.suda.edu.cn/">Soochow University</a></p></li>
-                                                <li><p><a href="http://ic.ruc.edu.cn/english/">China Renmin University-Suzhou International College</a></p></li>
+                                                <li><a href="http://www.suda.edu.cn/">Soochow University</a></li>
+                                                <li><a href="http://ic.ruc.edu.cn/english/">China Renmin University-Suzhou International College</a></li>
                                             </ul>
                                         </li>
                                         <hr>
                                         <!-- IMAGE -->
                                         <img src="images/host_institutions_images/Nanda-005.jpg" alt="" width="225" height="169" />
 
-                                        <li>In Shanghai:
+                                        <li><b>In Shanghai:</b>
                                             <ul>
-                                                <li><p><a href="http://www.shu.edu.cn/IndexPage.html">Shanghai University</a></p></li>
-                                                <li><p><a href="http://www.shupl.edu.cn/web/shupl/index">Shanghai University of Political Science and Law</a></p></li>
-                                                <li><p><a href="http://www.ecnu.edu.cn/">East China Normal University</a></p></li>
+                                                <li><a href="http://www.shu.edu.cn/IndexPage.html">Shanghai University</a></li>
+                                                <li><a href="http://www.shupl.edu.cn/web/shupl/index">Shanghai University of Political Science and Law</a></li>
+                                                <li><a href="http://www.ecnu.edu.cn/">East China Normal University</a></li>
                                             </ul>
                                         </li>
                                         <hr>
-                                        <li>In Hangzhou:
+                                        <li><b>In Hangzhou:</b>
                                             <ul>
-                                                <li><p><a href="http://www.zjgsu.edu.cn/english/">Zhejiang Gongshang University (earliest Chinese business school)</a></p></li>
+                                                <li><a href="http://www.zjgsu.edu.cn/english/">Zhejiang Gongshang University (earliest Chinese business school)</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -229,7 +225,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget">
@@ -244,7 +240,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -256,7 +252,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -268,7 +264,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact last">
