--- a/photos.html
+++ b/photos.html
@@ -106,7 +106,7 @@
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
@@ -126,14 +126,12 @@
                                             <th class="tg-yw4l"><a href="hostinstitutions.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Host Institutions</a></th>
                                         </tr>
                                     </table>                                      
-                                    <br>
-                                    <img src="images/heading_images/Gugong-002.jpg" width="328" height="185"> 
                                 </section>
 
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -142,6 +140,7 @@
                                     <h2>Photos</h2>
 
                                     <p>You should go to <a href="https://www.facebook.com/cunybc.chinaprogram">facebook</a> to view more pictures and videos of previous China programs.</p>
+                                    <iframe width="626" height="352" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
                                     <p style="margin-top: 0; margin-bottom: 0;">A video made by Professor Cheong and his students in the TV production classs: <a href="https://www.youtube.com/watch?v=fvnMD1CVQms">Winter 2014&nbsp;study in China</a></p>
                                     <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
                                     <hr>
@@ -182,7 +181,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget">
@@ -197,7 +196,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -209,7 +208,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -221,7 +220,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact last">
