--- a/roomboard.html
+++ b/roomboard.html
@@ -85,34 +85,53 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Program</h3>
-                                    <div>
-                                        <a class="list-group-item" href="announcement.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Announcement</a>                                        
-                                        <a class="list-group-item" href="itinerary.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a>
-                                        <a class="list-group-item" href="sidetrips.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a>
-                                        <a class="list-group-item" href="roomboard.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Room & Board</a>
-                                    </div>                                   
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="announcement.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Announcement</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="itinerary.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="coursework.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Coursework</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="sidetrips.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a></th>
+                                        </tr>
+                                    </table>                                    
                                 </section>
-
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -121,16 +140,13 @@
                                     <h2>Room & Board</h2>
 
                                     <p>As all past participants know, we do not stay in student dorms, whose conditions are not what you want to enjoy. Instead, we stay in comfotable and nice hotels throughout the program.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">Two students  share one hotel room (with two beds). Students will be&nbsp;asked to choose a rooommate (of the same sex) about one month before departure.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp; </p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">All hotels in the cities on our itinerary provide breakfast buffet with many Western & Chinese choices, and conveniences we can expect from hotels in NYC.  Security guards are on duty 24/7 in each of the hotels.</p>
+                                    
+                                    <p>Two students  share one hotel room (with two beds). Students will be&nbsp;asked to choose a rooommate (of the same sex) about one month before departure.</p>
 
-                                    <p>&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">The trip operators for our program in China understand hotel selections have a lot to do with how comfortable you will feel and how much you may enjoy the trip. The hotels are what they normally pick for educational groups (i.e., teachers, professors, superintendents, principals, college administrators, etc.) from the U.S.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+                                    <p>All hotels in the cities on our itinerary provide breakfast buffet with many Western & Chinese choices, and conveniences we can expect from hotels in NYC.  Security guards are on duty 24/7 in each of the hotels.</p>
+
+                                    <p>The trip operators for our program in China understand hotel selections have a lot to do with how comfortable you will feel and how much you may enjoy the trip. The hotels are what they normally pick for educational groups (i.e., teachers, professors, superintendents, principals, college administrators, etc.) from the U.S.</p>
+
 
                                     <div class="center">        
                                         <!-- IMAGE -->
@@ -141,29 +157,29 @@
                                         <img src="images/room_and_board_images/image006.jpg" alt="" width="180" height="135" />
                                     </div>
 
-                                    <p>&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">The hotel in Nanjing where we stay for about three weeks, though it may not look imposing from the outside, is also very clean, modern and comfortable, located right in the center of the city, by the picturesque Xuanwuhu Lake Park (as seen in the main photo of the page <a href="coursework.html">Coursework</a>), and the Ming dynasty city walls (as seen in the main photo of the page <a href="host_institutions.html">Host Institutions</a><a href="coursework.html"></a>), with easy access to colleges and universities and all the good things we can have in the city.  Students and faculty fondly refer to the hotel as “our home away from home.”</p>
+                                
+                                    <p>The hotel in Nanjing where we stay for about three weeks, though it may not look imposing from the outside, is also very clean, modern and comfortable, located right in the center of the city, by the picturesque Xuanwuhu Lake Park (as seen in the main photo of the page <a href="coursework.html">Coursework</a>), and the Ming dynasty city walls (as seen in the main photo of the page <a href="host_institutions.html">Host Institutions</a><a href="coursework.html"></a>), with easy access to colleges and universities and all the good things we can have in the city.  Students and faculty fondly refer to the hotel as “our home away from home.”</p>
 
-                                    <h3>&nbsp;</h3>
-                                    <h3 style="margin-top: 0; margin-bottom: 0;">The following are some of the hotels we have used in the past:</h3>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+
+                                    <br>
+                                    <p><b>The following are some of the hotels we have used in the past:</b></p>
+
                                     <ul> 
-                                        <li><p><a href="http://www.shangdahotel.com/en/index.html">Beijing Shangda International Hotel</a></p></li>
-                                        <li><a href="http://www.ihg.com/holidayinn/hotels/us/en/beijing/pegsh/hoteldetail/photos-tours">Beijing Holiday Inn Haidian</a></li>
-                                        <li></li>
                                         <li>
-                                            <p><a href="http://www.gloriahotels.com/">Xi’an Gloria International Hotel</a></p>
+                                                <a href="http://www.shangdahotel.com/en/index.html">Beijing Shangda International Hotel</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://www.ihg.com/holidayinn/hotels/us/en/beijing/pegsh/hoteldetail/photos-tours">Beijing Holiday Inn Haidian</a></li>
+
+                                        <li>
+                                            <a href="http://www.gloriahotels.com/">Xi’an Gloria International Hotel</a>
                                         </li>
                                         <li></li>
                                         <li>
-                                            <p><a href="http://www.gshmhotels.com/en_index.html">Shanghai Grand Skylight Gardens Hotel</a></p>
+                                            <a href="http://www.gshmhotels.com/en_index.html">Shanghai Grand Skylight Gardens Hotel</a>
                                         </li>
                                     </ul> 
 
-                                    <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;"><br>
-
-                                    </p>
                                     <div class="center">        
                                         <!-- IMAGE -->
                                         <img src="images/room_and_board_images/image008.jpg" alt="" width="180" height="135" />
@@ -186,7 +202,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -201,7 +217,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -216,7 +232,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -231,7 +247,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
