--- a/sabbathkosherfood.html
+++ b/sabbathkosherfood.html
@@ -85,32 +85,48 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Travel Info</h3>
-                                    <div>
-                                        <a class="list-group-item" href="passportvisa.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Passport & Visa</a>                                          
-                                        <a class="list-group-item" href="halalfood.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Halal Food</a>                                        
-                                    </div>                                   
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="passportvisa.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Passport & Visa</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="halalfood.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Halal Food</a></th>
+                                        </tr>
+                                    </table>                                  
                                 </section>
 
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -126,7 +142,7 @@
                                     <img class="left" src="images/sabbath_and_kosher_food/pic_1.jpg" alt="" width="225" height="169" />
                                     
                                     <hr>
-                                    <h2>Travel:</h2>
+                                    <p><b>Travel:</b></p>
                                     <p>The program director is always helpful by working with the students in planning around their Sabbath observance.&nbsp; These students never have to be on international flights or travel in or between cities during the Sabbath.</p>
                                     <p style="margin-top: 0; margin-bottom: 0;">The past students did not experience any problems in planning around the Sabbath and still were able to fulfill all requirements of the program.</p>
                                     <p>When we have Sabbath-observant students, the program will try to book the group’s international flights away from hours of Sabbath-observance, to avoid flying from Friday evening to Saturday evening.</p>
@@ -137,7 +153,7 @@
                                     <img class="right" src="images/sabbath_and_kosher_food/pic_2.jpg" alt="" width="225" height="169" />
 
                                     <hr>
-                                    <h2>Kosher:</h2>
+                                    <p><b>Kosher:</b></p>
                                     <p>Kosher food is a bit of a tougher question but the past students also managed it quite fine.</p>
                                     <p>Getting delivery from Chabads is not a difficult thing in most of the cities (e.g., Beijing, Shanghai, and Hong Kong). In the majority of the cities included in the program (Shanghai, Beijing, Hong Kong) there are active Chabads that have a restaurant and usually a shop that sells some kosher items.</p>
                                     <p>Nanjing is a city where the program stays for about 2 weeks, but it is only one hour away from Shanghai by high-speed trains. It takes just one quick phone call or an email to order delivery from Chabads in Shanghai to Nanjing.</p>
@@ -147,7 +163,7 @@
                                     <p style="margin-top: 0; margin-bottom: 0;">Overall, with proper planning ahead of time while in NY and looking into the Chabad locations relative to the cities, it is possible to do the trip "kosher style."</p>
 
                                     <hr>
-                                    <h2>More Questions?</h2>
+                                    <p><b>More Questions?</b></p>
                                     <p>If you still have questions, we can try to connect you with some students/faculty who went on our trip in the past. They will be happy to share their experience with you.</p>
 
                                 </article>
@@ -162,7 +178,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -177,7 +193,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -192,7 +208,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -207,7 +223,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
