--- a/scholarships.html
+++ b/scholarships.html
@@ -85,45 +85,60 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Financial Aid</h3>
-                                    <div>
-                                        <a class="list-group-item" href="financialaid.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Financial Aid</a>                                        
-                                        <a class="list-group-item" href="studentloads.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Student Loads</a>
-                                    </div>                                   
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="financialaid.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Financial Aid</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="studentloads.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Student Loads</a></th>
+                                        </tr>
+                                    </table>                                     
                                 </section>
-
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
                                 <article>
 
                                     <h2>Scholarships</h2>
-
-                                    <h3>There are several types of scholarships available for studying abroad.&nbsp; Students should read the information below carefully and contact their home campus about how to apply, as most scholarships are campus-specific.        </h3>
+                                    
+                                    <p>There are several types of scholarships available for studying abroad.&nbsp; Students should read the information below carefully and contact their home campus about how to apply, as most scholarships are campus-specific.</p>
                                     <p class="style2" style="margin-top:0; margin-bottom: 0;">&nbsp;</p>
                                     <p style="margin-top:0; margin-bottom: 0;">&nbsp;</p>
-                                    <h2 class="black" style="margin-top: 0; margin-bottom: 0;"><!-- IMAGE -->
-                                        <img class="right" src="images/financial_aid_images/Lijiang-01.jpg" alt="" width="225" height="169" />        SASA Study Abroad Scholarship</h2>
-                                    <p>Study Abroad Scholarship Assoication (SASA) is for Brooklyn College students, and it could award up to $1,000. </p>
+                                    
+                                    <p><b>SASA Study Abroad Scholarship:</b></p>
+                                    <p>Study Abroad Scholarship Assoication (SASA) is for Brooklyn College students, and it could award up to 1,000. </p>
                                     <p style="margin-top: 0; margin-bottom: 0;">This scholarship is administerd by Student Life of Brooklyn College. You should contact the following by visiting them, AS SOON AS POSSIBLE, for the application form and instructions:        </p>
                                     <blockquote style="margin-top: 0; margin-bottom: 0;">
                                         <p class="x_MsoNormal" style="margin-top: 0; margin-bottom: 0;"><span style="font-size:10.5pt; color:#1F497D">Student Activities</span></p>
@@ -132,36 +147,37 @@
                                         <p class="x_MsoNormal" style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
                                     </blockquote>
                                     <p>Go to <a href="http://students.brooklyn.cuny.edu/Forms.php">this link</a> for the SASA&nbsp; Application form and instructions:<a href="http://students.brooklyn.cuny.edu/Forms.php"> http://students.brooklyn.cuny.edu/Forms.php</a></p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">Many students of the recent programs received $1,000 from this scholarship fund.  You should read the instructions carefully and note its deadlines and requirements.</p>
+                                    <p style="margin-top: 0; margin-bottom: 0;">Many students of the recent programs received 1,000 from this scholarship fund.  You should read the instructions carefully and note its deadlines and requirements.</p>
                                     <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
                                     <p style="margin-top: 0; margin-bottom: 0;">You should read this link for more information about this and other sources of funding:</p>
                                     <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
                                     <p style="margin-top: 0; margin-bottom: 0;"><a href="http://www.brooklyn.cuny.edu/web/academics/international/scholarships.php">http://www.brooklyn.cuny.edu/web/academics/international/scholarships.php</a></p>
                                     <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
 
-                                    <h2>&nbsp;</h2>
-                                    <h2 style="margin-top: 0; margin-bottom: 0;">Other Scholarships</h2>
+                                    <br>
+                                    <p><b>Other Scholarships:</b></p>
                                     <ol>
-                                        <li><p>At Brooklyn College, students can also apply at the Undergraduate Dean’s Office, for research fellowship and other scholarships for study abroad (for undergraduates only). Inquire with that office and prepare well in advance.</p></li>
-                                        <li>Brooklyn College students can also apply for FURMAN travel fellowships.&nbsp; Be sure to check <a href="http://www.brooklyn.cuny.edu/web/academics/international/scholarships.php">this link</a> of  Brooklyn College website for information.</li>
+                                        <li><p>1. At Brooklyn College, students can also apply at the Undergraduate Dean’s Office, for research fellowship and other scholarships for study abroad (for undergraduates only). Inquire with that office and prepare well in advance.</p></li>
+                                        <li>2. Brooklyn College students can also apply for FURMAN travel fellowships.&nbsp; Be sure to check <a href="http://www.brooklyn.cuny.edu/web/academics/international/scholarships.php">this link</a> of  Brooklyn College website for information.</li>
                                         <li>
-                                            <p>If you are a student in <span class="style3">CUNY&nbsp; Macaulay Honors College/Program</span>, speak to that office about scholarship for study abroad. They may be able to cover students' study abroad expenses for the China trip according to the student's status: usually, the Macaulay's yearly limits are: up to $3,000 for sophomores; up to $6,000 for junoirs, and up to $7,500 for seniors, but this may change, so speak to the Office of Scholarships &amp; Grants at Macaulay, and ciick <a href="http://www.macaulay.cuny.edu/current-students/opp-fund-eligibility.php" class="small"><strong>this link</strong></a> for more informaiton.<font face="Tahoma" color="black" size="2"><span style="font-size:10pt;" dir="ltr"><font face="Times New Roman" size="2"><span style="font-size:16px;"><font face="Helvetica" size="3"><span style="font-size:12pt;"><br>
+                                            <p>3. If you are a student in <font color="blue">CUNY Macaulay Honors College/Program</font>, speak to that office about scholarship for study abroad. They may be able to cover students' study abroad expenses for the China trip according to the student's status: usually, the Macaulay's yearly limits are: up to 3,000 for sophomores; up to 6,000 for junoirs, and up to 7,500 for seniors, but this may change, so speak to the Office of Scholarships &amp; Grants at Macaulay, and ciick <b><a href="http://www.macaulay.cuny.edu/current-students/opp-fund-eligibility.php" class="small">this link</a></b> for more informaiton.<font face="Tahoma" color="black" size="2"><span style="font-size:10pt;" dir="ltr"><font face="Times New Roman" size="2"><span style="font-size:16px;"><font face="Helvetica" size="3"><span style="font-size:12pt;"><br>
                                                         </span></font></span></font></span></font></p>
                                         </li>
                                         <li>
-                                            <p>SEEK programs may also provide financial support for studying abroad. Talk to the program director.</p></li>
-                                        <li><p>Graduate students can speak to the office of graduate studies and research for funding possibilities.</p></li>
-                                        <li><a target="_blank" href="http://www.iie.org/Programs/Gilman-Scholarship-Program">Benjamin A. Gilman International Scholarship </a>
-                                            <p>Some students applied for <a href="http://www.iie.org/en/Programs/Gilman-Scholarship-Program">Gilman International Scholarship</a> and received $2,000 in the past.</p>
-                                            &nbsp; If you receive the Gilman Scholarship, please contact the program director and we can try to help you extend your stay in China, so that you can meet the requiement of 4 weeks (which will involve some extra cost for the airline tickets).</li>
-                                        <li>Critical Language Scholarship; Chinese is one of the critical languages eligible. <a href="http://www.clscholarship.org/">Click this link</a></li>
-                                        <li><a target="_blank" href="http://www.borenawards.org/boren_scholarship/basics.html">Boren Awards</a></li>
-                                        <li><a target="_blank" href="http://www.whitaker.org/">The Whitaker International Undergraduate Scholarships for Biomedical Engineering</a> <br>
+                                            <p>4. SEEK programs may also provide financial support for studying abroad. Talk to the program director.</p></li>
+                                        <li><p>5. Graduate students can speak to the office of graduate studies and research for funding possibilities.</p></li>
+                                        <li>6. <a target="_blank" href="http://www.iie.org/Programs/Gilman-Scholarship-Program">Benjamin A. Gilman International Scholarship
+                                            Some students applied for <a href="http://www.iie.org/en/Programs/Gilman-Scholarship-Program">Gilman International Scholarship</a> and received 2,000 in the past.
+                                            If you receive the Gilman Scholarship, please contact the program director and we can try to help you extend your stay in China, so that you can meet the requiement of 4 weeks (which will involve some extra cost for the airline tickets).</li>
+                                        <li>7. Critical Language Scholarship; Chinese is one of the critical languages eligible. <a href="http://www.clscholarship.org/">Click this link</a></li>
+                                        <li>8. <a target="_blank" href="http://www.borenawards.org/boren_scholarship/basics.html">Boren Awards</a></li>
+                                        <li>9. <a target="_blank" href="http://www.whitaker.org/">The Whitaker International Undergraduate Scholarships for Biomedical Engineering</a> <br>
                                         </li>
-                                        <li><a target="_blank" href="http://www1.cuny.edu/sites/studyabroad/financial-matters/national-and-local-scholarships/">CUNY Study Abroad</a> </li>
-                                        <li><span style=""><a target="_blank" href="http://www.studyabroadfunding.org/">www.StudyAbroadFunding.org</a> &amp; <a target="_blank" href="http://www.studyabroad.com/scholarships.aspx">www.StudyAbroad.com</a><br>
+                                        <li>10.<a target="_blank" href="http://www1.cuny.edu/sites/studyabroad/financial-matters/national-and-local-scholarships/">CUNY Study Abroad</a> </li>
+                                        <li>11.<span style=""><a target="_blank" href="http://www.studyabroadfunding.org/">www.StudyAbroadFunding.org</a> &amp; <a target="_blank" href="http://www.studyabroad.com/scholarships.aspx">www.StudyAbroad.com</a><br>
                                             </span></li>
-                                        <li><a target="_blank" href="http://pivot.cos.com/">PIVOT Funding Search</a> Click here for <a target="_blank" href="http://www.ccny.cuny.edu/ora/pivot-funding-database.cfm">instructions</a> on how to create an account.</li><li><p>Read more about other opportunities of scholarships by clicking <a href="http://www.cuny.edu/admissions/financial-aid/scholarships.html">here</a></p></li>
+                                        <li>12.<a target="_blank" href="http://pivot.cos.com/">PIVOT Funding Search</a> Click here for <a target="_blank" href="http://www.ccny.cuny.edu/ora/pivot-funding-database.cfm">instructions</a> on how to create an account.</li>
+                                        <li>13.Read more about other opportunities of scholarships by clicking <a href="http://www.cuny.edu/admissions/financial-aid/scholarships.html">here</a></p></li>
                                     </ol> 
 
 
@@ -177,7 +193,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -192,7 +208,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -207,7 +223,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -222,7 +238,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
