--- a/studentloads.html
+++ b/studentloads.html
@@ -85,40 +85,48 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <!--Banner--> 
+            <!--Banner-->       
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img src="images/heading_images/China-03.jpg" >                        
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
                     </div>
                 </div>
             </div>
-            <br><br>
+
+            <br>
             
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Financial Aid</h3>
-                                    <div>
-                                        <a class="list-group-item" href="financialaid.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Financial Aid</a>                                          
-                                        <a class="list-group-item" href="scholarships.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Scholarships</a>                                        
-                                    </div>                                   
-                                </section>
 
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="financialaid.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Financial Aid</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="scholarships.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Scholarships</a></th>
+                                        </tr>
+                                    </table>                                     
+                                </section>
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -126,13 +134,10 @@
 
                                     <h2>Student Loads</h2>
                                     <p>Students usually apply for student loans to cover their trip cost and tuition.  We urge you to talk to the financial aid office on your campus and start this process as early as possible, in the first month of the semester, as it normally takes 2-3 weeks for the Financail Aid Offce to process the request.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp; </p>
                                     <p style="margin-top: 0; margin-bottom: 0;">Be sure to read <a href="http://www.brooklyn.cuny.edu/web/off_financialaid/FinAid_scholarship_info_studyabroad.pdf">this link for financial aid</a> at Brooklyn College; students from outside Brooklyn College should contact the financial aid office on their home campus for the same information. </p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">Those who are TAP eligible may receive a maximum of 8 semesters as an undergraduate. Some students may opt to use half of one of their eight semesters towards the summer. Those who are PELL eligible and weren't full time during fall or spring semesters may qualify to have PELL funding for the summer.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+                                    <br>
 
                                     <div class="center">        
                                         <img src="images/financial_aid_images/Loan_image001.jpg" alt="" width="162" height="121" />
@@ -144,14 +149,14 @@
 
                                     <div class="clearFloat"></div>
 
-                                    <p>&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">At Brooklyn College, students should call the financial aid office at 718-951-5816 if you need to clarify any of the aforementioned information.  The financial aid officer would advise each student to meet with a member of the financial aid staff to discuss the individual situation. If you need a personal appointment to discuss financial aid options for your particular situation, please call one of the following numbers for assistance: (718) 951-5669 for Mr. Marcus Richardson and (718) 951-5816/5178 for Ms. Millicent Grant.</p>
 
                                     <!-- IMAGE -->
 
-                                    <p>&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">Students can make appointments to see any one of the financial aid counselors by logging in the BCwebportal and using the F.A.S.T scheduling tool, attend one of the financial aid study abroad workshops, as well as visiting the financial aid representatives at the Enrollment Services Center, open 9am to 8pm Mon-Thur and 9am to 5pm on Fridays (no appointment needed). They can also email inquiries to <a href="mailto:finaid@brooklyn.cuny.edu">finaid@brooklyn.cuny.edu</a>.</p>
-                                    <p>&nbsp;</p>
+                                    <br>
 
                                     <div class="center"> 
                                         <img src="images/financial_aid_images/Loan_image004.jpg" alt="" width="162" height="121" />
@@ -159,7 +164,7 @@
                                         <img src="images/financial_aid_images/Loan_image006.jpg" alt="" width="162" height="121" />
                                     </div>
                                     <p style="margin-top: 0; margin-bottom: 0;">Due to high demand, personal appointments may be delayed. If you would like to know how your financial aid applies to your study abroad plans you are strongly encouraged to attend a Financial Aid Information Session for Study Abroad. For the financial aid study abroad workshops, please check: <a href="http://events.brooklyn.cuny.edu/cal/event/showEventMore.rdo">BC Calendar Event listings</a></p>
-                                    <p>&nbsp;</p>
+                                    <br>
                                     <p style="margin-top: 0; margin-bottom: 0;">Non-CUNY students should also speak to an advisor in their college's financial aid office to discuss their options.  Some schools may want to establish a consortium agreement whereby they will use the student's enrollment status with Brooklyn College as the basis for processing any aid for their home school.</p>
                                     <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
 
@@ -180,7 +185,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -195,7 +200,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -210,7 +215,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -225,7 +230,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
