--- a/testimonials.html
+++ b/testimonials.html
@@ -95,7 +95,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="center"src="images/heading_images/great_wall_1.jpg" width="1030" height="312">
+                        <img align="middle"src="images/heading_images/great_wall_1.jpg" width="1030" height="312">
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
@@ -130,12 +130,11 @@
                                     <br>
                                     <br>
                                     <br>
-                                    <iframe width="328" height="215" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
                                 </section>
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -175,7 +174,6 @@
                                     <p>I have been encouraging all my friends to take a study abroad trip or better yet take the trip to China .  I have become more cognizant of intercultural communication and the societal norms that govern and affect communication, not just through reading a textbook but also through living the ideas discussed in the textbooks and later forming my own conclusions.</p>
                                     <p>I have gained forty-six new friends and I have met a professor whose professionalism and passion for learning has left a lasting impression on me.  Although I have learned a lot from this trip I am yet to overcome my biggest obstacle, learning to use the chopsticks.</p>
                                     <p>Thank you Professor Lu. You are wonderful!</p>
-                                    <hr>
                                     <hr>
                                     <p>The CUNY China-trip was absolutely fantastic. I was able to learn so much. It was especially great that we did not remain in one part of China . By traveling to various regions such as Beijing, Xi'an, Nanjing, Changzhou, and Shanghai, we received a more rounded image of Chinese society and culture.</p>
                                     <p>It would have been nice to have had a course in Mandarin. However, China itself was our classroom. We were given the freedom to learn words and phrases that we found useful and apply them on a daily basis. Therefore, the absence of a Chinese language course was not an issue. Plus, we had random people who we encountered throughout the trip that tried their best to assist us with word acquisition and proper tone pronunciation. Also, after seeing the extent to which Chinese people know about their own history and how much history is actually visible in China , I would definitely consider taking a course in Chinese History. This, on the other hand, also made me wish that I had more knowledge of American history.</p>
@@ -326,7 +324,7 @@
 
                                     <p>After wrapping up our tour of Beijing, we boarded the night train which took us fourteen hours to get to the next city. During those fourteen hours, we had the opportunity to amass with our fellow classmates discussing and sharing the most interesting feature of our stay in Beijing. We talked about our struggle eating with the chopsticks and the way the Chinese people looked at us as if we were God-sent. As our train sped through the rugged terrain, some of us who could not stay asleep gazed out the window at the mountain sides. We also observed some of the brightest stars looking down from the heavens.Finally, we arrived in the beautiful city of Xi'an. This city, adds to our wealth of knowledge. It enriches us with the ancient history of China and opens doors to a wealth of cultural experiences. My most commendable feature of Xi'an was my visit to the pits of the Terra cotta warriors. We learned that the clay warriors were ordered to be built by the emperor to protect his tomb after his death. The clay warriors were used instead of real life people. They were used to keep away evil spirits. We also saw a film which enriched us on the Chinese soldiers in action.</p>
                                     <hr>
-                                    <p>There have been many exciting things I have learned form the tour to China . But, there were only few that I would forget. One of them was the martial arts "Wu Shu" training. Originally, before I got to China , I told myself that there would be no way for me to learn any type of Martial Arts due to time frame of all the events. You would actually be surprised how much freedom you will have, which will help you to explore and have your own leisure time. Anyway, when I got there, Prof. Liu through my request found a martial arts instructor who was more than just an expert; he was also the chair person of Physical Education Department. I had private lessons from since we got there till the last day of the trip. Another thing I would never forget was the excitement of the economy difference. Everything was so cheap! When we went out for a dinner we would pay about $10 total for five to six people in a nice fancy restaurant. Being on this trip, I have learned how lucky I am to be an American. I have seen how hard people work, how poor people live and how hard people try or beg for money. I have learned how to have a basic conversation in Chinese. Learn the strategy of bargaining. And lots lots more. You have to see it to believe it. I would recommend this trip not only to students, but also to family and friends. The reason for that I would say because there is more than it sounds. When I convince those who did not want to attend this trip to go, I would strongly recommend to buy one of those Chinese phrase books and a dictionary.</p>
+                                    <p>There have been many exciting things I have learned form the tour to China . But, there were only few that I would forget. One of them was the martial arts "Wu Shu" training. Originally, before I got to China , I told myself that there would be no way for me to learn any type of Martial Arts due to time frame of all the events. You would actually be surprised how much freedom you will have, which will help you to explore and have your own leisure time. Anyway, when I got there, Prof. Liu through my request found a martial arts instructor who was more than just an expert; he was also the chair person of Physical Education Department. I had private lessons from since we got there till the last day of the trip. Another thing I would never forget was the excitement of the economy difference. Everything was so cheap! When we went out for a dinner we would pay about 10 total for five to six people in a nice fancy restaurant. Being on this trip, I have learned how lucky I am to be an American. I have seen how hard people work, how poor people live and how hard people try or beg for money. I have learned how to have a basic conversation in Chinese. Learn the strategy of bargaining. And lots lots more. You have to see it to believe it. I would recommend this trip not only to students, but also to family and friends. The reason for that I would say because there is more than it sounds. When I convince those who did not want to attend this trip to go, I would strongly recommend to buy one of those Chinese phrase books and a dictionary.</p>
                                     <hr>
                                     <p>The BC Study Abroad in China trip was amazing. Not only did I get to run my own research project, but I also learned a lot about Chinese history and was able to practice the Mandarin I had been learning. The best part of the trip was that everyday was like an adventure where you would explore new places and discover new things about the Chinese as well as yourself. I would definitely recommend the trip to anyone who is open-minded and excited about experiencing something different.</p>
                                     <hr>
@@ -395,7 +393,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget">
@@ -410,7 +408,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -422,7 +420,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -434,7 +432,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact last">
