--- a/whychina.html
+++ b/whychina.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
+
     </head>
 
     <body class="no-sidebar">
@@ -106,7 +107,7 @@
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
@@ -118,7 +119,7 @@
                                                                             <a class="list-group-item" href="faq.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; FAQ</a>
                                                                             <a class="list-group-item" href="hostinstitutions.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Host Institutions</a>
                                     
-                                                                       </div>    -->
+                                                                        </div>    -->
 
                                     <table id="tg-IkuPG" class="tg">
                                         <tr>
@@ -136,16 +137,12 @@
 
                                     </table>
 
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <iframe width="328" height="215" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
                                 </section>
 
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -157,20 +154,28 @@
                                         No country (let alone one of continental proportions) has tried to accomplish so much in such a short time. 
                                         China’s unique attempt to complete two transitions at once –from a command to a market economy and from a rural to an urban society
                                         —is without historical precedent.”</p>
-                                    <p><strong>--The World Bank</strong>, China 2020: Development and Challenges in the New Century</p>
-                                    <hr>    
+                                    <p><strong>  --  The World Bank</strong>, China 2020: Development and Challenges in the New Century</p>
+                                    <br>
+                                    <iframe width="626" height="352" src="https://www.youtube.com/embed/gNE7VPtvfbI" frameborder="0" allowfullscreen></iframe>
+                                    <hr>  
+                                    <br>
                                     <p>“Nowhere in the world is there a market like this—nowhere. To me, the 21st century will be the Chinese century. 
                                         China will change the economic balance of the world.”</p>
-                                    <p><strong>--Guy McLeod</strong>, President, Airbus China</p>
+                                    <p><strong>  --  Guy McLeod</strong>, President, Airbus China</p>
                                     <hr>
+                                    <br>
                                     <p>“U.S. Study Sees China as No. 1 Economy by 2030"</p>
-                                    <p><strong>--THOM SHANKER</strong>, New York Times, December 10, 2012. <a href="extra_files/NYT--China_Economy_by_2030.doc">(click here to read the article)</a></p>
-                                    <hr>
-                                    <p>It is official: China is now No. 1 economy (December 4, 2014). <a href="http://www.marketwatch.com/story/its-official-america-is-now-no-2-2014-12-04">(click here to read the article)</a></p>
-                                    <hr>
-                                    <p>Joseph J. Stiglitz:: <em><strong>Chinese Century</strong></em> &nbsp;(<a href="documents/ChineseCentury.pdf">China Has Overtaken the U.S. as the World's Largest Economy</a>)</p>
+                                    <p><strong>  --  THOM SHANKER</strong>, New York Times, December 10, 2012. <a href="extra_files/NYT--China_Economy_by_2030.doc">(click here to read the article)</a></p>
 
-                                    <p align="center"><img src="images/welcome_images/CC-05.jpg" width="800" height="169" align="absmiddle">      </p>
+                                    <p>It is official: China is now No. 1 economy (December 4, 2014). <a href="http://www.marketwatch.com/story/its-official-america-is-now-no-2-2014-12-04">(click here to read the article)</a></p>
+
+                                    <p>Joseph J. Stiglitz:: <em><strong> Chinese Century </strong></em> &nbsp;(<a href="documents/ChineseCentury.pdf">China Has Overtaken the U.S. as the World's Largest Economy</a>)</p>
+                                    <hr>
+                                    <br>
+                                    <!--<p style="margin-top:0;margin-bottom:0;"><span style="font-family:Arial, Helvetica, sans-serif; font-size:12px;">-->
+                                    <p>&quot;Take Chinese Creativity Seriously or Lose Out</span><span class="style1">&quot;</span><br>
+                                        <span class="style1"><strong class="indent">--  John Howkins</strong>, Financial Times: December 15, 2013</span> <a href="documents/FT-ChineseCreativity_001.doc">(click here to read the article)</a></p>
+                                    <!--<p align="center"><img src="images/welcome_images/CC-05.jpg" width="800" height="169" align="absmiddle">      </p>-->
 
                                 </article>
 
@@ -184,7 +189,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget">
@@ -199,7 +204,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -211,7 +216,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -223,7 +228,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact last">
