--- a/contractinfo.html
+++ b/contractinfo.html
@@ -68,11 +68,6 @@
                                 </ul>
                             </li> 
 
-                            <br>
-                            <br>
-                            <img src="images/heading_images/China-03.jpg" >
-
-
                             <li>
                                 <a href="#">Contract Us</a>
                                 <ul>
@@ -90,32 +85,49 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Contract Us</h3>
-                                    <div>
-                                        <a class="list-group-item" href="https://www.facebook.com/cunybc.chinaprogram"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Visit Us On Facebook</a>                                          
-                                        <a class="list-group-item" href="mailto:CUNYinChina@brooklyn.cuny.edu"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Email Us A Question</a>                                        
-                                    </div>                                   
+
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="https://www.facebook.com/cunybc.chinaprogram"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Visit Us On Facebook</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="mailto:CUNYinChina@brooklyn.cuny.edu"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Email Us A Question</a></th>
+                                        </tr>
+                                    </table>                                     
                                 </section>
 
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -123,8 +135,8 @@
 
                                     <h2>Contract Info</h2>
 
-                                    <h3 class="center"><span class="blue">Program Director: Prof. Shuming Lu</blue></h3>
-                                    <p class="center">Department of Speech Communication Arts & Sciences<br>
+                                    <h3 align="center"><span class="blue">Program Director: Prof. Shuming Lu</blue></h3>
+                                    <p align="center">Department of Speech Communication Arts & Sciences<br>
                                         Brooklyn College-CUNY<br>
                                         Office: 3439 Boylan Hall<br>
                                         Tel: 718-951-5225<br>
@@ -132,15 +144,15 @@
                                     </p>
 
                                     <br><br> 
-                                    <div class="center">
+                                    <div align="center">
                                         <!-- IMAGE -->
                                         <img src="images/contact_us_images/Lu-May2012.jpg" alt="" width="155" height="164" />
                                     </div> 
                                     <br><br> 
 
                                     <hr>
-                                    <h3 class="center"><span class="blue">Program Assistant: Ms. Annsonia Garrick</span></h3>
-                                    <p class="center">Department of Speech Communication Arts & Sciences<br>
+                                    <h3 align="center"><span class="blue">Program Assistant: Ms. Annsonia Garrick</span></h3>
+                                    <p align="center">Department of Speech Communication Arts & Sciences<br>
                                         Brooklyn College-CUNY<br>
                                         Office: 3439 Boylan Hall<br>
                                         Tel: 718-951-5225<br>
@@ -161,7 +173,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -176,7 +188,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -191,7 +203,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -206,7 +218,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
