--- a/coursework.html
+++ b/coursework.html
@@ -86,78 +86,97 @@
             <!-- Logo -->
             <div id="logo">
                 <h1><a href="index.html">Brooklyn College</a></h1>
+                <br>
                 <span>Study in China</span>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
-
+							
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Program</h3>
-                                    <div>
-                                        <a class="list-group-item" href="announcement.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Announcement</a>                                        
-                                        <a class="list-group-item" href="itinerary.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a>
-                                        <a class="list-group-item" href="sidetrips.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a>
-                                        <a class="list-group-item" href="roomboard.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Room & Board</a>
-                                    </div>                                   
-                                </section>
 
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="announcement.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Announcement</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="itinerary.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="sidetrips.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="roomboard.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Room & Board</a></th>
+                                        </tr>
+                                    </table>                                    
+                                </section>								
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
                                 <article>
 
                                     <h2>coursework</h2>
-                                    <h3>The CUNY-BC China program offers the following possible courses:</h3>
+                                    <p><b>The CUNY-BC China program offers the following possible courses:</b></p>
                                     <ol> 
                                         <li>
-                                            <p>&nbsp; ARTD 3108: Art of Ancient China</p>
-                                            <a href="documents/ARTD3108-ArtofChina-Syllabus.pdf">Syllabus</a></li>
-                                        <li>
-                                            <p style="margin-top: 0; margin-bottom: 0;">&nbsp; BUSN 3175: Asian Business <a href="documents/BUSN3175-Syllabus.pdf">Syllabus</a></p>
+                                            1. ARTD 3108: Art of Ancient China
+                                            <a href="documents/ARTD3108-ArtofChina-Syllabus.pdf">Syllabus</a>
                                         </li>
-                                        <li>&nbsp; CORC 3202: Classical Philosophies of India and China <a href="documents/CORC3202-PhilosophyIndiaChina_001.pdf">Syllabus</a>          &nbsp;<span class="style5"> --<span class="style3">-  <u><em>This course satisfies Pathways College Option Requirement</em></u></span></span></li>
                                         <li>
-                                            <p>&nbsp; CORC 3206: Development of the Silk Road <a href="documents/CORC3206-Syllabus.pdf">Syllabus</a></p>
+                                            <p>2. BUSN 3175: Asian Business <a href="documents/BUSN3175-Syllabus.pdf">Syllabus</a></p>
+                                        </li>
+                                        <li>3. CORC 3202: Classical Philosophies of India and China <a href="documents/CORC3202-PhilosophyIndiaChina_001.pdf">Syllabus</a>          &nbsp;<span class="style5"> --<span class="style3">-  <u><em>This course satisfies Pathways College Option Requirement</em></u></span></span></li>
+                                        <li>
+                                            <p>4. CORC 3206: Development of the Silk Road <a href="documents/CORC3206-Syllabus.pdf">Syllabus</a></p>
                                             &nbsp;<span class="style5"> --<span class="style3">-<u><em> This course satisfies Pathways College Option Requirement</em></u></span></span></li>
                                         <li>
-                                            <p>&nbsp; CLAS 1110 (i.e., CORC 1110): Classical Cultures (China) <a href="extra_files/Syllabus/CC1110-China.pdf">Syllabus</a>          
+                                            <p>5. CLAS 1110 (i.e., CORC 1110): Classical Cultures (China) <a href="extra_files/Syllabus/CC1110-China.pdf">Syllabus</a>          
                                                 <span class="style5">&nbsp;<span class="style3">--- <u><em>This course satisfies Pathways Flexible Core Requirement</em></u></span></span></li>
                                         <li>
-                                            <p>&nbsp; HIST 3005: The Shaping of the Modern World <a href="documents/HIST3005Nanjing.pdf">Syllabus</a>&nbsp;<span class="style5"> --<span class="style3">- <u><em>This course satisfies Pathways Flexible Core World Cultures &amp; Global Issues Requirement</em></u></span></span></p>
+                                            <p>6. HIST 3005: The Shaping of the Modern World <a href="documents/HIST3005Nanjing.pdf">Syllabus</a>&nbsp;<span class="style5"> --<span class="style3">- <u><em>This course satisfies Pathways Flexible Core World Cultures &amp; Global Issues Requirement</em></u></span></span></p>
                                         </li>
                                         <li>
-                                            <p>&nbsp; HIST 3534: Revolutionary China <a href="extra_files/Syllabus/Syllabus-History%2053.pdf">Syllabus</a>          </p>
+                                            <p>7. HIST 3534: Revolutionary China <a href="extra_files/Syllabus/Syllabus-History%2053.pdf">Syllabus</a>          </p>
                                         </li>
                                         <li>
-                                            <p>&nbsp; SPEC 1619: Intercultural Communication <a href="extra_files/Syllabus/SPEC-1619.pdf">Syllabus</a></p></li>
+                                            <p>8. SPEC 1619: Intercultural Communication <a href="extra_files/Syllabus/SPEC-1619.pdf">Syllabus</a></p></li>
                                         <li>
-                                            <p>&nbsp; SPEC 2623: Business Communication (cross-cultural perspectives) <a href="extra_files/Syllabus/Syllabus-Speech%2023.doc">Syllabus</a></p>
+                                            <p>9. SPEC 2623: Business Communication (cross-cultural perspectives) <a href="extra_files/Syllabus/Syllabus-Speech%2023.doc">Syllabus</a></p>
                                         </li>
                                         <li>
-                                            <p> CHIN 1010: Beginners Chinese-Level I <a href="documents/CHIN1010.pdf">Syllabus</a></p></li>
+                                            <p>10.CHIN 1010: Beginners Chinese-Level I <a href="documents/CHIN1010.pdf">Syllabus</a></p></li>
                                         <li>
-                                            <p> CHIN 1020: Intensive Elementary Chinese-Level II <a href="documents/CHIN1020.pdf">Syllabus</a></p></li>
-                                        <li>CHIN 1030: Intensive Intermediate Chinese-Level III&nbsp; <a href="documents/CHIN1030.pdf">Syllabus</a></li>
+                                            <p>11.CHIN 1020: Intensive Elementary Chinese-Level II <a href="documents/CHIN1020.pdf">Syllabus</a></p></li>
+                                        <li>12.CHIN 1030: Intensive Intermediate Chinese-Level III&nbsp; <a href="documents/CHIN1030.pdf">Syllabus</a></li>
                                         <li>
-                                            <p>CHIN 2024: Advanced (Chinese) Language Skills <a href="documents/CHIN2024-Sylllabus.pdf">Syllabus</a></li>
+                                            <p>13.CHIN 2024: Advanced (Chinese) Language Skills <a href="documents/CHIN2024-Sylllabus.pdf">Syllabus</a></li>
                                         <li>
-                                            <p style="margin-top: 0; margin-bottom: 0;">TVRA 3871: Elements of TV Field Production
+                                            <p>14.TVRA 3871: Elements of TV Field Production
                                                 <a href="documents/TVRA3871-Syllabus-China_002.pdf">Syllabus</a>
                                             <ul>
-                                                <li>--
-                                                    <p> TVRA 4849: International Documentary Production</p>
+                                                <li>
+                                                    <p>-- TVRA 4849: International Documentary Production</p>
                                                 </li>
                                                 <li>
                                                     <p>-- TVRA 5010: Independent Projects</p>
@@ -165,7 +184,7 @@
                                             </ul>
                                         </li>
                                         <li class="style20">
-                                            <p style="margin-top: 0; margin-bottom: 0;"><strong>SPEC 7296X - Special Topic Course for Graduate Students</strong>                    </li>
+                                            <p><strong>15.SPEC 7296X - Special Topic Course for Graduate Students</strong>                    </li>
                                     </ol> 
                                     <strong>
                                         <!-- IMAGE -->
@@ -176,21 +195,24 @@
                                     <blockquote style="margin-top: 0; margin-bottom: 0;">
                                         <p style="margin-top: 0; margin-bottom: 0;"><span class="style1"><strong><span class="brightRed">Note</span></strong>: </span><span class="style1"><span class="black">Students can enroll in 1-2 courses (with only one language course). Each course is  for 3 credits; But the Chinese courses (levels 1-3) are each for 4 credits; the Advanced Chinese Language Skills is for 3 credits.</span></span></p>
                                     </blockquote>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+
                                     <p style="margin-top: 0; margin-bottom: 0;">All courses are taught by Brooklyn College faculty who are experts in the areas of study.</p>
 
 
                                     <p> The courses are subject to sufficient enrollment, approval by Brooklyn College, and faculty availability.  Students make their course selections in the Application Form. The final decision about which courses and how many courses can be offered is made 1-2 weeks after the application deadline or about 2 months before departure.<br>
                                     </p>
-                                    <h3><strong>E-Permit for CUNY Students outside Brooklyn College:</strong></h3>
+                                    <hr>
+                                    <br>
+                                    <p><strong>E-Permit for CUNY Students outside Brooklyn College:</strong></p>
                                     <p>Students from other CUNY campuses (such as Baruch, Hunter, City, City Tech, Queens, Lehman, etc) will need to apply for an e-permit.  But you do not apply for e-permit until about one week after the application deadline when we have by that time decided what courses will be offered.  When applying to our program, you just make your course selections in the application form.</p>
 
                                     <!-- IMAGE -->
                                     <img class="right" src="images/coursework_images/NJ-003.jpg" alt="" width="225" height="169" />
 
                                     <p>During the 4 weeks in China, instruction for the courses is delivered in several venues: site visits, lectures & discussions, and online interactions (e.g., portal.cuny.edu). To ensure that students will be able to complete the coursework with quality and have time for self-exploration and side trips while in China, reading assignments are given a few weeks before departure and some online work also starts before departure.</p>
-                                    <h3><strong>Graduate Students:</strong></h3>
+                                    <hr>
+                                    <br>
+                                    <p><strong>Graduate Students:</strong></p>
                                     <p>Graduate students may register for a graduate-level Special Topic/Independent Study course (e.g., SPEC 7296X in communication if the student's department can accept the credit of the speech graduate-level course;  or one graduate level speical topic/independent study course in the student’s department with approval of his/her department chair or graduate studies director). That graduate-level speical topic/independent study course is to be linked with one relevant undergraduate course offered during the program, but the graduate student(s) will be given extra reading assignments and research work.</p>
 
                                     <!-- IMAGE -->
@@ -199,11 +221,11 @@
                                     <p>The graduate student, when deciding to apply to this study in China program, should first discuss a research proposal with the graduate advisor of her/his home department, seek approval from her/his department chair or graduate advisor, and, after being accepted into the program, consult Prof. Lu (the Program Director) at <a href="mailto:CUNYinChina@brooklyn.cuny.edu">CUNYinChina@brooklyn.cuny.edu</a>, so as to develop a research topic related to the student’s area of study.</p>
                                     <br>
 
-                                    <h3>For sample graduate student research papers, click the following:</h3>
+                                    <p>For sample graduate student research papers, click the following:</p>
                                     <ol>
-                                        <li><p><a href="extra_files/Syllabus/Frances%20R.%20-%20%20English%20Teaching%20in%20China.pdf">English Language Teaching in China</a></p></li>
-                                        <li><p><a href="extra_files/Syllabus/Robert%20G-Christ%20and%20Buddha.pdf">Comparative Study of Icons of Buddha & Christ</a></p></li>
-                                        <li><p><a href="extra_files/Syllabus/K.%20Masser.pdf">Minnie Vautrin’s Burden-Nanjing, China</a></p></li>
+                                        <li><p><a href="extra_files/Syllabus/Frances%20R.%20-%20%20English%20Teaching%20in%20China.pdf">1. English Language Teaching in China</a></p></li>
+                                        <li><p><a href="extra_files/Syllabus/Robert%20G-Christ%20and%20Buddha.pdf">2. Comparative Study of Icons of Buddha & Christ</a></p></li>
+                                        <li><p><a href="extra_files/Syllabus/K.%20Masser.pdf">3. Minnie Vautrin’s Burden-Nanjing, China</a></p></li>
                                     </ol>
 
                                     <!-- IMAGE -->
@@ -223,7 +245,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -238,7 +260,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -253,7 +275,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -268,7 +290,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
