--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <!--        <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
-                <script src="js/jssor.slider-21.1.6.mini.js" type="text/javascript"></script>-->
         <script type="text/javascript">
         </script>
 
@@ -21,7 +19,6 @@
             <!-- Header -->
             <div id="header-wrapper">
                 <header id="header" class="container">
-                    <!--<h1><img style="float: left" src="images/Brookllyn_College_Logo.gif"  width="324" height="88"</a></h1>-->
 
                     <!-- Nav -->
                     <div id="nav">
@@ -103,7 +100,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="center" src="images/heading_images/China-03.jpg" width="1100" height="212">                        
+                        <img align="center" src="images/heading_images/China-03.jpg" width="1100" height="212">                       
                     </div>
                 </div>
             </div>
@@ -170,9 +167,6 @@
                                     <br>
 
 
-                                    <!-- IMAGE -->
-                                    <!--<img class="right" src="images/welcome_images/image_22.jpg" alt="center" width="770" height="320">-->
-
                                     <p>Students will experience wide geographic differences and varied regional customs & cuisines, 
                                         while learning about the uniqueness of China’s cultural renewal and modernization process. 
                                         In addition, we also help organize side trips to Hong Kong, Sanya (Oriental Hawaii), Guilin, 
@@ -201,16 +195,14 @@
                                     <h3>Study Abroad in China</h3>
                                     <iframe width="360" height="215" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
                                     <footer>
-                                        <a href="\StudyinChina\announcement.html" class="button icon fa-info-circle">Find out more</a>
+                                        <a href="\StudyinChina\announcement.html" class="button icon fa-info-circle" align="middle">Find out more info</a>
                                     </footer>
-
                                 </section>
                                 <hr>
-
-
+                                <br>
                             </div>
 
-                            <br>
+
                             <!-- Sidebar -->
                             <div id="sidebar">
                                 <section class="Images">
@@ -219,45 +211,42 @@
                                         <div class="row 50%">
                                             <div class="6u">
                                                 <a href="http://www.accuweather.com/en/cn/china-weather" class="image fit">
-                                                    <img src="images/information/weather.png" title="China Weather"/>
+                                                    <img src="images/welcome_images/weather.png" title="China Weather"/>
                                                 </a>
                                             </div>
                                             <div class="6u">
                                                 <a href="http://www.chinahighlights.com/map/" class="image fit">
-                                                    <img src="images/information/map.png" title="China Map"/>
+                                                    <img src="images/welcome_images/map.png" title="China Map"/>
                                                 </a>
                                             </div>
                                             <div class="6u">
                                                 <a href="http://beijing.usembassy-china.org.cn/index.html" class="image fit">
-                                                    <img src="images/information/embassy.png" title="Ebassy of US" />
+                                                    <img src="images/welcome_images/embassy.png" title="Ebassy of US" />
                                                 </a>
                                             </div>
                                             <div class="6u">
                                                 <a href="\StudyinChina\sidetrips.html" class="image fit">
-                                                    <img src="images/information/tips.png" title="Trip Tips" />
+                                                    <img src="images/welcome_images/tips.png" title="Trip Tips" />
                                                 </a>
                                             </div>
                                             <div class="6u">
                                                 <a href="\StudyinChina\passportvisa.html" class="image fit">
-                                                    <img src="images/information/visa.png" title="Visa" />
+                                                    <img src="images/welcome_images/visa.png" title="Visa" />
                                                 </a>
                                             </div>
                                             <div class="6u">
                                                 <a href="\StudyinChina\photos.html" class="image fit">
-                                                    <img src="images/information/pictures.png" title="Photos" />
+                                                    <img src="images/welcome_images/pictures.png" title="Photos" />
                                                 </a>
                                             </div>                                            
                                         </div>
                                     </div>
-                                    <br>
                                 </section>
 
                                 <section>
                                     <img src="images/welcome_images/3.gif" alt=""/>
                                 </section>
 
-                                <hr>
-                                <br>
                                 <section>
                                     <h3>Useful Link</h3>
                                     <ul class="style2">
@@ -265,15 +254,14 @@
                                         <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396">BC Calendar</a></li><hr>
                                         <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP">BC Web Central</a></li><hr>
                                         <li><a href="http://library.brooklyn.cuny.edu/resources/">BC Library</a></li><hr>
-                                        <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html">CUNYfirst</a></li><hr>
-
+                                        <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html">CUNYfirst</a></li>
                                     </ul>
                                 </section>    
-                               
+
                             </div>
 
                         </div>
-                        
+
                         <!--<div class="8u 12u(medium) important(medium)">-->
                         <div>    
 
@@ -313,15 +301,15 @@
                                         Be sure to watch this video of Nanjing (also called Nanking):</p>
 
 
-                                <section>
-                                    <br>
+                                    <section>
+                                        <br>
 
-                                    <h3> THE BEST OF NANJING!</h3>
+                                        <h3> THE BEST OF NANJING!</h3>
 
-                                    <iframe width="1200" height="500" src="https://www.youtube.com/embed/3rZwfDmG3K8" frameborder="0" allowfullscreen></iframe>
-                                    <br>
-                                    <a href="http://nanjing.made-in-china.com/info/business-travel-guide.html" class="button icon fa-arrow-circle-right">More info about Nanjing</a>  
-                                </section>
+                                        <iframe width="1200" height="500" src="https://www.youtube.com/embed/3rZwfDmG3K8" frameborder="0" allowfullscreen></iframe>
+                                        <br>
+                                        <a href="http://nanjing.made-in-china.com/info/business-travel-guide.html" class="button icon fa-arrow-circle-right">More info about Nanjing</a>  
+                                    </section>
 
                                 </section>
                             </div>                            
