--- a/passportvisa.html
+++ b/passportvisa.html
@@ -85,32 +85,47 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1><a href="index.html">Brooklyn College</a></h1>
-                <span>Study in China</span>
+                <div id="movetxt">
+                    <h1>Brooklyn College</h1>
+                    <br>
+                    <span>Study in China</span>
+                </div>
             </div>
 
-            <hr>
+            <!--Banner-->       
+            <div id="banner-wrapper">
+                <div id="banner" class="box container">
+                    <div class="row">
+                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                    </div>
+                </div>
+            </div>
+
+            <br>
 
             <!-- Main -->
             <div id="main-wrapper">
                 <div class="container">
                     <div class="row 200%">
-                        <div class="4u 12u$(medium)">
+                        <div class="4u 12u(medium)">
                             <div id="sidebar">
 
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Travel Info</h3>
-                                    <div>
-                                        <a class="list-group-item" href="sabbathkosherfood.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Sabbath & Kosher Food</a>                                          
-                                        <a class="list-group-item" href="halalfood.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Halal Food</a>                                        
-                                    </div>                                   
-                                </section>
-
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="sabbathkosherfood.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Sabbath & Kosher Food</a></th>
+                                        </tr>                                        
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="halalfood.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Halal Food</a></th>
+                                        </tr>
+                                    </table>                                     
+                                </section>                                
 
                             </div>
                         </div>
-                        <div class="8u 12u$(medium) important(medium)">
+                        <div class="8u 12u(medium) important(medium)">
                             <div id="content">
 
                                 <!-- Content -->
@@ -118,50 +133,51 @@
 
                                     <h2>Passport</h2>
 
-                                    <p><span class="orange">“This Is China</span> ”--turn on audio and enjoy this <a href="http://www.youtube.com/watch?v=2TRs2s-22tg">beautiful clip</a></p>
+                                    <p>“<font color="orange">This Is China</font> ”--turn on audio and enjoy this <a href="http://www.youtube.com/watch?v=2TRs2s-22tg">beautiful clip</a></p>
                                     <div class="pageJump"><a name="PASSPORT"></a></div><!-- page jump -->
 
                                     <p>Everyone needs a valid passport to travel overseas and to re-enter the U.S. If you already have a passport and it is due to expire within 6 months beyond the conclusion of our study abroad program, renew it now.</p>
-                                    <p style="margin-top: 0; margin-bottom: 0;"><span class="style19">The study abroad office on many campuses oftern has a passport day and they can help get the passort for you very quickly, much faster than a passport agency.&nbsp; So check with the study abroad office on your campus.</span>        </p>
+                                    <p style="margin-top: 0; margin-bottom: 0;"><font color="blue">The study abroad office on many campuses oftern has a passport day and they can help get the passort for you very quickly, much faster than a passport agency.&nbsp; So check with the study abroad office on your campus.</font>        </p>
                                     <p>International students holding F1 or J1 visas should contact the Office of International Students or other appropriate office at their home institution for information regarding F1 or J1 visas. These students must make sure that they can legally enter the United States after they have left the country.</p>
 
                                     <!-- IMAGE -->
                                     <img class="right" src="images/passport_and_visa_images/Nanshida-001.jpg" alt="" width="225" height="169" />
                                     <div class="pageJump"><a name="VISA"></a></div><!-- page jump -->
+                                    <br>
                                     <hr>
-                                    <h2>Apply for a Chinese Visa</h2>
+                                    <p><b>Apply for a Chinese Visa</b></p>
 
                                     <p>You need a tourist (L) visa to enter China if you do not hold a Chinese passport.   Please go to the following link to read about how to apply for a Chinese tourist visa.  Start the <a href="http://www.china-embassy.org/eng/hzqz/zgqz/t84246.htm">visa application</a> about 1 and ½ months before departure.</p>
-                                    <p><span class="brightRed"><strong>Note:</strong></span> Participants do not apply for the visa until we will give specific information for visa application, after the international flights for the trip are finalized and after travel agencies provide confirmation of itineraries and hotels in China (<em>in early November for winter programs, and in early April for summer programs</em>).  Before that,  you just need to make sure your passport is valid until 6 months beyond the trip dates.</p>
+                                    <p><strong><font color="Red">Note:</font></strong> Participants do not apply for the visa until we will give specific information for visa application, after the international flights for the trip are finalized and after travel agencies provide confirmation of itineraries and hotels in China (<em>in early November for winter programs, and in early April for summer programs</em>).  Before that,  you just need to make sure your passport is valid until 6 months beyond the trip dates.</p>
                                     <p style="margin-top: 0; margin-bottom: 0;"></p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    
-                                    <hr>
-                                    <h3>Useful Links:</h3>
-                                    <ul> 
-                                        <li><p><a href="http://beijing.usembassy-china.org.cn/">U.S Embassy in Beijing</a></p></li> 
-                                        <li><p><a href="http://shanghai.usembassy-china.org.cn/">US Consulate in Shanghai</a></p></li>
-                                        <li><p><a href="http://www.china-embassy.org/">Chinese Embassy in Washington</a></p></li>
-                                        <li><p><a href="http://www.visarite.com/chnConsulate.htm">Useful Site about Visa</a></p></li>
-                                        <li><p><a href="http://travel.state.gov/travel/cis_pa_tw/cis/cis_1089.html">Vaccinations</a></p></li>
-                                    </ul> 
+                                    <br>
 
                                     <hr>
-                                    <h3>Helpful Tips for Traveling Abroad:</h3>
+                                    <p><b>Useful Links:</b></p>
                                     <ul> 
-                                        <li><p><a href="http://www.travelchinaguide.com/map/index.htm">Map of China</a></p></li>
-                                        <li><p><a href="http://www.chinapages.com/jiangsu/nanjing/nanjing.htm">Nanjing: Capital of Jiangsu Province</a></p></li>
-                                        <li><p><a href="http://www.chinatoday.com/travel/traveltips.htm">China travel tips</a></p></li>
+                                        <li><a href="http://beijing.usembassy-china.org.cn/">U.S Embassy in Beijing</a></li> 
+                                        <li><a href="http://shanghai.usembassy-china.org.cn/">US Consulate in Shanghai</a></li>
+                                        <li><a href="http://www.china-embassy.org/">Chinese Embassy in Washington</a></li>
+                                        <li><a href="http://www.visarite.com/chnConsulate.htm">Useful Site about Visa</a></li>
+                                        <li><a href="http://travel.state.gov/travel/cis_pa_tw/cis/cis_1089.html">Vaccinations</a></li>
                                     </ul> 
-
+                                    <br>
                                     <hr>
-                                    <h3>Some keywords to search:</h3>
+                                    <p><b>Helpful Tips for Traveling Abroad:</b></p>
                                     <ul> 
-                                        <li><p>China travel tip</p></li>
-                                        <li><p>China travel help</p></li>
-                                        <li><p>China travel info</p></li>
-                                        <li><p>China travel guide</p></li>
-                                        <li><p>you can find tons of information</p></li>
+                                        <li><a href="http://www.travelchinaguide.com/map/index.htm">Map of China</a></li>
+                                        <li><a href="http://www.chinapages.com/jiangsu/nanjing/nanjing.htm">Nanjing: Capital of Jiangsu Province</a></li>
+                                        <li><a href="http://www.chinatoday.com/travel/traveltips.htm">China travel tips</a></li>
+                                    </ul> 
+                                    <br>
+                                    <hr>
+                                    <p><b>Some keywords to search:</b></p>
+                                    <ul> 
+                                        <li>China travel tip</li>
+                                        <li>China travel help</li>
+                                        <li>China travel info</li>
+                                        <li>China travel guide</li>
+                                        <li>you can find tons of information</li>
                                     </ul> 
 
 
@@ -178,7 +194,7 @@
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
                     <div class="row">
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -193,7 +209,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -208,7 +224,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Links -->
                             <section class="widget links">
@@ -223,7 +239,7 @@
                             </section>
 
                         </div>
-                        <div class="3u 6u$(medium) 12u$(small)">
+                        <div class="3u 6u(medium) 12u(small)">
 
                             <!-- Contact -->
                             <section class="widget contact">
